--- a/assignment2/faq.html
+++ b/assignment2/faq.html
@@ -10,6 +10,11 @@
 		<a href="calculator.html">Calculator</a>
 		<a href="reg_form.html">Register</a>
 		<a href="feedback_form.html">Feedback</a>
-		<a href="faq.html">FAQs</a><br>
+		<a href="faq.html">FAQs</a><br><br>
+		
+		<h2>What is this page for?</h2>
+		<p>We do not know. Legend has it that it was mentioned in the assignment of a CIS student centuries ago, but the instructions have long since been lost.</p><br>
+		<h2>Why do I need to register for a calculator?</h2>
+		<p>Your guess is as good as mine.</p>
 	</body>
 </html>
