--- a/assignment2/reg_form.html
+++ b/assignment2/reg_form.html
@@ -11,5 +11,10 @@
 		<a href="reg_form.html">Register</a>
 		<a href="feedback_form.html">Feedback</a>
 		<a href="faq.html">FAQs</a><br>
+		
+		<p>Why do I need to register for a calculator?</p>
+		<form>
+			<input type="submit" value="Submit">
+		</form>
 	</body>
 </html>
